<resources>
    <string name="app_name">WeddingPlanner</string>
    <string name="ad_keyword">mariage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="days_to_wedding">jours avant le Grand Jour!</string>
    <string name="initial_date_to_update">Quand est le grand jour?</string>
    <string name="tasks_option">To do</string>
    <string name="invite_option">Invités</string>
    <string name="budget_option">Budget</string>
    <string name="prestations_option">Prestataires</string>
    <string name="title_activity_guest">Invitations</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="item_recreateDb_action">Réinitialisation de la base</string>
    <string name="item_recreateDb_summary">Réinitialise la base de données sans perte des données</string>
    <string name="item_resetDb_action">Formattage de la base</string>
    <string name="item_resetDb_summary">Reconstruit la base de donnée entièrement. Toutes vos données seront perdues</string>
    <string name="item_recreateDb_toast">Base de donnée recréée avec succès</string>
    <string name="item_recreateDb_failed_toast">Une erreur est intervenue. Les données n\'ont pu être sauvegardées</string>
    <string name="item_rate_my_app">Notez WeddingPlanner</string>
    <string name="item_planning">Planning automatique</string>
    <string name="item_planning_on_summary">Remplit le planning avec des tâches pré-définies</string>
    <string name="item_planning_off_summary">Remplissage automatique des tâches non activé</string>
    <string name="contact_tab_statistics">Statistiques</string>
    <string name="contact_tab_liste">Liste</string>
    <string name="action_add_contact">Ajouter invité</string>
    <string name="action_delete_contact">Supprimer invité</string>
    <string name="action_update_contact">Modifier invité</string>
    <string name="action_call_contact">Appeler invité</string>
    <string name="action_mail_contact">Envoi email invité</string>
    <string-array name="contact_category_list">
        <item>Famille</item>
        <item>Amis</item>
        <item>Collègues</item>
        <item>Autres</item>
    </string-array>
    <string name="contact_mail_subject">Invitation à mon mariage</string>
    <string name="contact_mail_message">Hello!\nNous nous marions le %1$s. Nous serions très heureux de vous compter parmi les invités au mariage.</string>
    <string name="contact_mail_provider">Choix du client mail:</string>
    <string name="title_activity_contactformcontainer">Invitations</string>
    <string name="contact_field_surname">Nom</string>
    <string name="contact_field_name">Prénom</string>
    <string name="contact_field_phone">Tel.</string>
    <string name="contact_field_mail">E-Mail</string>
    <string name="contact_field_address">Adresse</string>
    <string name="contact_item_townhall">Mairie</string>
    <string name="contact_item_church">Eglise</string>
    <string name="contact_item_VinHonneur">Vin d\'honneur</string>
    <string name="contact_item_reception">Réception</string>
    <string name="contact_label_ceremony">Cérémonie</string>
    <string name="contact_label_invitation">Invitation</string>
    <string name="contact_item_fairepart">Faire-part envoyé?</string>
    <string name="contact_label_reponse">Réponse</string>
    <string name="contact_item_noresponse">Sans réponse</string>
    <string name="contact_item_attend">Présent</string>
    <string name="contact_item_absent">Absent</string>
    <string name="contact_button_validate">Valider</string>
    <string name="contact_label_category">Catégorie</string>
    <string name="contact_category_family">Famille</string>
    <string name="contact_category_friend">Amis</string>
    <string name="contact_category_collegue">Collègues</string>
    <string name="contact_category_other">Autre</string>
    <string name="contact_title_choice_dialog">Contact</string>
    <string-array name="contact_choice_dialog_entries">
        <item>Créer</item>
        <item>Importer</item>
    </string-array>
    <string name="action_validate_import_contact">OK</string>
    <string name="action_finish_import">Fin de l\'import</string>
    <string name="title_activity_task">Tâches</string>
    <string name="title_section1">Liste des tâches</string>
    <string name="title_section2">Tâches en cours</string>
    <string name="title_section3">Tâches terminées</string>
    <string name="title_section4">Tâches en retard</string>
    <string name="planning_dialog_msg">Voulez-vous définir un planning par défaut?</string>
    <string name="planning_dialog_msg_option1">Oui</string>
    <string name="planning_dialog_msg_option2">Non</string>
    <string name="task_hint_field_description">Description de la tâche</string>
    <string name="task_label_dates">Echeance \u0026 rappels</string>
    <string name="task_label_echeance">Echeance le</string>
    <string name="task_hint_field_echeance">Entrez la date</string>
    <string name="task_button_validate">Valider</string>
    <string name="task_label_remind_date">Rappel</string>
    <string name="task_spinner_prompt">Rappel avant échéance</string>
    <string name="task_spinner_item1">Aucun</string>
    <string name="task_spinner_item2">1 mois avant</string>
    <string name="task_spinner_item3">2 semaines avant</string>
    <string name="task_spinner_item4">1 semaine avant</string>
    <string name="task_spinner_item5">3 jours avant</string>
    <string name="task_spinner_item6">1 jour avant</string>
    <string name="task_spinner_item7">6 heures avant</string>
    <string name="task_spinner_item8">2 heures avant</string>
    <string name="task_spinner_item9">1 heure avant</string>
    <string-array name="task_spinner_entries">
        <item>@string/task_spinner_item1</item>
        <item>@string/task_spinner_item2</item>
        <item>@string/task_spinner_item3</item>
        <item>@string/task_spinner_item4</item>
        <item>@string/task_spinner_item5</item>
        <item>@string/task_spinner_item6</item>
        <item>@string/task_spinner_item7</item>
        <item>@string/task_spinner_item8</item>
        <item>@string/task_spinner_item9</item>
    </string-array>
    <string name="action_add_task">Nouvelle tâche</string>
    <string name="action_delete_task">Supprimer tâche</string>
    <string name="action_update_task">Modifier tâche</string>
    <string-array name="task_period_list">
        <item>Avant un an</item>
        <item>9-12 mois</item>
        <item>6-9 mois</item>
        <item>3-6 mois</item>
        <item>1-3 mois</item>
        <item>Après 1 semaine</item>
        <item>Avant 1 semaine</item>
        <item>Le jour J</item>
        <item>Mon planning</item>
    </string-array>
    <string name="action_add_vendor">Nouveau prestataire</string>
    <string name="action_delete_vendor">Supprimer prestataire</string>
    <string name="action_update_vendor">Modifier prestataire</string>
    <string name="action_add_budget_item">Nouvel élément budgétaire</string>
    <string name="action_delete_budget_item">Supprimer dépense</string>
    <string name="action_update_budget_item">Modifier dépense</string>
    <string name="alert_dialog_validate">OK</string>
    <string name="contact_alert_dialog_title">Informations manquantes</string>
    <string name="email_validator_message">Format incorrect de l\'e-mail</string>
    <string name="phone_validator_message">Format incorrect du numéro de téléphone</string>
    <string name="contact_mandatory_validator_message">Les champs nom, prénom sont obligatoires. Veuillez les renseigner svp.</string>
    <string name="task_alert_dialog_title">Informations manquantes</string>
    <string name="task_mandatory_validator_message">La description de la tâche est obligatoire. Veuillez la renseigner svp.</string>
    <string name="task_inconsistent_validator_message">Un rappel ne peut être défini sans échéance</string>
    <string name="vendor_alert_dialog_title">Informations manquantes</string>
    <string name="vendor_mandatory_validator_message">Le nom de la société est obligatoire. Veuillez le renseigner svp.</string>
    <string name="budget_alert_dialog_title">Informations manquantes</string>
    <string name="budget_mandatory_validator_message">Les libellés, nom du prestataire, montants sont obligatoires. Veuillez les renseigner svp.</string>
    <string name="import_contact_validator_message">Plusieurs contacts ont été partiellement importés à cause d\'informations manquantes</string>
    <string name="placeholder">placeholder</string>
    <string name="empty">Vide</string>
    <string name="empty_list">Liste vide</string>
    <string name="delete_guest_alert_dialog_title">Erreur suppression</string>
    <string name="delete_guest_OK_alert_dialog_title">Suppression OK</string>
    <string name="delete_guest_0_alert_message">Aucun enregistrement correspondant à l\'invité sélectionné n\'a été trouvé</string>
    <string name="delete_guest_multiple_alert_message">Plusieurs enregistrements correspondants à l\'invité sélectionné ont été trouvés</string>
    <string name="delete_guest_OK_alert_message">Contact supprimé de la liste!</string>
    <string name="update_task_alert_dialog_title">Erreur mise à jour</string>
    <string name="update_task_OK_alert_dialog_title">Mise à jour OK</string>
    <string name="update_task_0_alert_message">Aucun enregistrement correspondant à la tâche sélectionnée n\'a été trouvé</string>
    <string name="delete_task_alert_dialog_title">Erreur suppression</string>
    <string name="delete_task_OK_alert_dialog_title">Suppression OK</string>
    <string name="delete_task_0_alert_message">Aucun enregistrement correspondant à la tâche sélectionnée n\'a été trouvé</string>
    <string name="delete_task_multiple_alert_message">Plusieurs enregistrements correspondants à la tâche sélectionnée ont été trouvés</string>
    <string name="delete_task_OK_alert_message">Tâche supprimée de la liste!</string>
    <string name="delete_vendor_OK_alert_message">Prestataire supprimé de la liste!</string>
    <string name="inconsistent_paid_amount">La somme payée ne peut être supérieure au total</string>
    <string name="delete_budget_OK_alert_message">Ligne de dépense supprimés de la liste!</string>
    <string name="call_guest_alert_message">Numéro de téléphone indisponible</string>
    <string name="mail_guest_alert_message">Adresse mail indisponible</string>
    <string name="task_notification_title">Rappel</string>
    <string name="contact_import_notification_message">%1$d contacts ont été importés</string>
    <string name="title_activity_vendor">Prestations</string>
    <string name="vendor_label_company">Société</string>
    <string name="vendor_label_contact">Nom &amp; prénom du contact</string>
    <string name="vendor_spinner_label_category">Catégorie</string>
    <string name="vendor_label_address">Adresse</string>
    <string name="vendor_label_mail">E-Mail</string>
    <string name="vendor_label_note">Note</string>
    <string name="vendor_button_validate">Valider</string>
    <string name="vendor_label_phone">Tel.</string>
    <string name="budget_hint_field_caption">Légende</string>
    <string name="budget_label_vendor">Prestataire</string>
    <string name="budget_label_total_amount">Total</string>
    <string name="budget_label_paid_amount">Payé</string>
    <string name="budget_hint_field_total_amount">Montant dû</string>
    <string name="budget_hint_field_paid_amount">Montant payé</string>
    <string name="budget_hint_field_note">Note</string>
	<string name="budget_button_validate">Valider</string>
</resources>