<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VendorFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/vendorEditCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_company" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/vendorEditContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_contact"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/vendorEditCompanyAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/vendorEditCompanyPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/vendorEditCompanyMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_mail"
                android:inputType="textEmailAddress|none" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/vendorLabelCompanyCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/vendor_spinner_label_category"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/vendorSpinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vendor_form_field_inbetween"
                    android:layout_weight="1"
                    android:entries="@array/vendor_spinner_categories_entries" />
            </LinearLayout>

            <EditText
                android:id="@+id/vendorEditCompanyNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendor_label_note"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/vendorButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor_button_validate" />
    </LinearLayout>

</LinearLayout>