<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollContactLayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableLayout
            android:id="@+id/LayoutContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="*"
            tools:context=".ContactFragment" >

            <!-- TODO: Update blank fragment layout -->

            <TableRow
                android:id="@+id/tableContactRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/contactEditSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/contact_field_surname"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/contactEditName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/contact_field_name"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/contactEditPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_field_phone"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/contactEditMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_field_mail"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/contactEditAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact_field_address"
                    android:inputType="textPostalAddress" />
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/CategoryofContactLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/contactLabelCategory"
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_label_category"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/contactCheckBoxFamily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_category_family" />

                        <RadioButton
                            android:id="@+id/contactCheckBoxFriend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_category_friend" />

                        <RadioButton
                            android:id="@+id/contactCheckBoxCollegue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_category_collegue" />

                        <RadioButton
                            android:id="@+id/contactCheckBoxOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/contact_category_other" />
                    </RadioGroup>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/invitationLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:id="@+id/contactLabelInvitation"
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/contact_label_invitation" />

                    <CheckBox
                        android:id="@+id/contactcheckBoxFairePart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentTop="false"
                        android:layout_below="@id/contactLabelInvitation"
                        android:text="@string/contact_item_fairepart" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/CeremonyLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/contactLabelCeremony"
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/contact_label_ceremony"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/contactCheckBoxChurch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contactLabelCeremony"
                        android:text="@string/contact_item_church" />

                    <CheckBox
                        android:id="@+id/contactCheckBoxHall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contactCheckBoxChurch"
                        android:text="@string/contact_item_townhall" />

                    <CheckBox
                        android:id="@+id/contactCheckBoxCocktail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/contactCheckBoxHall"
                        android:layout_marginLeft="@dimen/contact_checkbox_space"
                        android:layout_toRightOf="@+id/contactCheckBoxHall"
                        android:text="@string/contact_item_VinHonneur" />

                    <CheckBox
                        android:id="@+id/contactCheckBoxReception"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@color/AliceBlue"
                        android:layout_alignLeft="@+id/contactCheckBoxCocktail"
                        android:layout_alignTop="@id/contactCheckBoxHall"
                        android:text="@string/contact_item_reception" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableContactRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/reponseLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contactLabelReponse"
                        style="?android:attr/listSeparatorTextViewStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/contact_label_reponse" />

                    <RadioGroup
                        android:id="@+id/contactRadioGroupRSVP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="false"
                        android:layout_below="@id/contactLabelReponse" >

                        <RadioButton
                            android:id="@+id/contactRadioNoAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/contact_item_noresponse" />

                        <RadioButton
                            android:id="@+id/contactRadioAttend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_item_attend" />

                        <RadioButton
                            android:id="@+id/contactRadioAbsent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_item_absent" />
                    </RadioGroup>
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tablecontactRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/contactButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task_button_validate" />
    </LinearLayout>

</LinearLayout>