<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/budgetEditCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/budget_hint_field_caption">
                <requestFocus />
            </EditText>

            <AutoCompleteTextView
                android:id="@+id/budgetMultiAutoCompleteContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/budget_label_vendor" >
            </AutoCompleteTextView>

            <Spinner
                android:id="@+id/budgetSpinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/vendor_spinner_categories_entries" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/budget_form_section_gap" >

                <TextView
                    android:id="@+id/budgetLabelTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_label_total_amount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/budgetEditTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/budgetLabelTotalAmount"
                    android:layout_marginLeft="@dimen/budget_form_field_inbetween"
                    android:layout_toRightOf="@+id/budgetLabelTotalAmount"
                    android:ems="10"
                    android:hint="@string/budget_hint_field_total_amount"
                    android:inputType="numberDecimal" >
                </EditText>

                <TextView
                    android:id="@+id/budgetLabelPaidAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/budgetLabelTotalAmount"
                    android:layout_marginTop="@dimen/budget_form_field_top_margin"
                    android:text="@string/budget_label_paid_amount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/budgetEditPaidAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/budgetLabelPaidAmount"
                    android:layout_alignStart="@id/budgetEditTotalAmount"
                    android:layout_alignLeft="@id/budgetEditTotalAmount"
                    android:layout_below="@id/budgetEditTotalAmount"
                    android:layout_toRightOf="@+id/budgetLabelPaidAmount"
                    android:layout_toEndOf="@+id/budgetLabelPaidAmount"
                    android:ems="10"
                    android:hint="@string/budget_hint_field_paid_amount"
                    android:inputType="numberDecimal" >
                </EditText>
            </RelativeLayout>

            <EditText
                android:id="@+id/budgetEditNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/budget_hint_field_note"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/budgetButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_button_validate" />
    </LinearLayout>

</LinearLayout>